# eventsys

./: .gitignore  Cargo.toml  README.md  run_perf.sh
.github/workflows/: rust.yml
benches/: batch.rs  listeners.rs
examples/: static.rs
src/: backend.rs  err.rs  lib.rs  map.rs  query.rs  slot.rs
tests/: batch.rs  disable.rs  listeners.rs
