[package]
name = "eventsys"
version = "0.1.0"
edition = "2021"
description = "A library for dispatching and processing events. Events can be handled in a deferred and/or immediate way."
license = "MIT"
repository = "https://github.com/wutterfly/eventsys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anythingy = { git = "https://github.com/wutterfly/anythingy" }


[dev-dependencies]
criterion = { version = "0.5.1", features = [] }


[profile.release]
incremental = true
debug = true
lto = "fat"


[[bench]]
harness = false
name = "listeners"

[[bench]]
harness = false
name = "batch"
